tests/linear/linear-non-005/expected
Example Non-Linearly Wired Circuits
Input is dangling
## Circuits
```
// LOG : Starting Linear NetList 
// LOG : Parsing Successful
Example.sv:5:22-26: Linearity Error:
left := USED

```
## Verilator
```
%Warning-UNUSED: Example.sv:3: Signal is not used: 'right'
                             : ... In instance Example
              , input  logic right
                             ^~~~~
                 ... Use "/* verilator lint_off UNUSED */" and lint_on around source to disable this message.
%Error: Exiting due to 1 warning(s)
```
